type_check_output.txt
services\stt-provider\tests\mocks.py:24: error: The return type of a generator
function should be "Generator" or one of its supertypes  [misc]
        def get_events(self) -> AsyncIterator[TranscriptionEvent]:
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
services\stt-provider\tests\mocks.py:26: error: "await" outside coroutine
("async def")  [await-not-async]
                event = await self.events_to_yield.get()
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
services\stt-provider\tests\test_service.py:50: error: Non-overlapping equality
check (left operand type: "bytes", right operand type:
"Literal['text.transcript']")  [comparison-overlap]
        assert nats.published_messages[0]["subject"] == "text.transcript"
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Found 3 errors in 2 files (checked 7 source files)
Type checking C:\Users\Tom\source\repos\live-stt\services\stt-provider...

Type checking failed.
